<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@drawable/background_color">
      <ImageView
            android:id="@+id/start_logo"
            android:layout_width="357dp"
            android:layout_height="313dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/start_logo"
            app:srcCompat="@drawable/blood_logo_4" />

    <TextView
        android:id="@+id/start_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="212dp"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="139dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="69dp"
            android:background="@drawable/rounded_button"
            android:text="@string/button2" />


</RelativeLayout>