<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/request_listlayout_Cardview"
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_margin="4dp"
        android:elevation="4dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/cardview_compat_inset_shadow">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="65dp"
                android:layout_height="64dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="13dp"
                android:src="@drawable/profile_logo" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/user_location"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="-89dp"
                android:layout_marginTop="16dp"
                android:text="@string/request_username"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="104dp"
                android:text="@string/request_Location" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="75dp" />

            <TextView
                android:id="@+id/user_bloodgroup"
                android:layout_width="52dp"
                android:layout_height="55dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:text="@string/request_Bloodgroup"
                android:textAlignment="center"
                android:textColor="#FF2156"
                android:textColorHint="@android:color/holo_red_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/request_button"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/user_location"
                android:background="@drawable/rounded_button_2"
                android:text="Ask For Help"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="14dp"
                android:layout_height="16dp"
                android:layout_alignStart="@+id/user_name"
                android:layout_centerVertical="true"
                android:layout_marginStart="-4dp"
                app:srcCompat="@drawable/location_logo" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>